--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.1.0",
     "element-ui": "^2.4.9",
     "mockjs": "^1.0.1-beta3",
     "path-to-regexp": "^2.4.0",
     "svg-sprite-loader": "^4.1.3",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
