--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "v-charts": "^1.19.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.18.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
