--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.9",
+    "lodash.clonedeep": "^4.5.0",
     "mockjs": "^1.0.1-beta3",
     "path-to-regexp": "^2.4.0",
     "svg-sprite-loader": "^4.1.3",
