--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-    "name": "hvac-admin",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
-    },
-    "dependencies": {
-        "axios": "^0.18.0",
-        "echarts": "^4.1.0",
-        "element-ui": "^2.8.2",
-        "jsoneditor": "^5.31.1",
-        "lodash.clonedeep": "^4.5.0",
-        "mockjs": "^1.0.1-beta3",
-        "path-to-regexp": "^2.4.0",
-        "svg-sprite-loader": "^4.1.3",
-        "v-charts": "^1.19.0",
-        "vue": "^2.5.17",
-        "vue-router": "^3.0.1",
-        "vuedraggable": "^2.18.1",
-        "vuex": "^3.0.1"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.0.3",
-        "@vue/cli-plugin-eslint": "^3.0.3",
-        "@vue/cli-service": "^3.0.3",
-        "crypto-js": "^3.1.9-1",
-        "eslint": "^5.8.0",
-        "eslint-plugin-vue": "^5.0.0-0",
-        "less": "^3.0.4",
-        "less-loader": "^4.1.0",
-        "style-resources-loader": "^1.2.1",
-        "vue-cli-plugin-style-resources-loader": "^0.1.3",
-        "vue-template-compiler": "^2.5.17"
-    }
+  "name": "hvac-admin",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "echarts": "^4.1.0",
+    "element-ui": "^2.8.2",
+    "jsoneditor": "^5.31.1",
+    "lodash.clonedeep": "^4.5.0",
+    "mockjs": "^1.0.1-beta3",
+    "path-to-regexp": "^2.4.0",
+    "svg-sprite-loader": "^4.1.3",
+    "v-charts": "^1.19.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.6.10",
+    "vuedraggable": "^2.18.1",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.0.3",
+    "@vue/cli-plugin-eslint": "^3.0.3",
+    "@vue/cli-service": "^3.0.3",
+    "crypto-js": "^3.1.9-1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0-0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
+    "vue-template-compiler": "^2.5.17"
+  }
 }
